@@ -1,5 +1,7 @@
 20220704:
  * fixed a bug with searching for scripts with variations
+ * added the possibilty to update deps from pre/post processing
+ * added --extra-cache-tags and --name for "cm run script"
 
 20220701:
  * added dummy "cm test script"
